# dkn-compute-node

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_V2.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.pod  Justfile  LICENSE  Makefile  README.md  TESTER_GUIDE.md  TESTING.md  compose.yml  dnet.art  docker-compose.yml  install-rocm.sh  install.ps1  install.sh  pod.sh  register_rln.sh  run_node.sh  start.sh  supervisord.conf
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_dev_container.yml  build_dev_exe.yml  build_prod_container.yml  build_prod_exe.yml  build_side_container.yml  build_side_exe.yml  build_startgo.yml  image-dev.yml  image-release.yml  image.yml  rebuild-linux.yml  releases.yml  rocm-hotfix.yml  tests.yml
benches/: ollama.rs
compute/: .env.example  Cargo.toml  Cross.toml  compose.yml
compute/src/: config.rs  launch.rs  lib.rs  main.rs  monitor.rs  node.rs
compute/src/config/: mod.rs  models.rs  openai.rs
compute/src/gossipsub/: mod.rs  pingpong.rs
compute/src/handlers/: mod.rs  pingpong.rs  workflow.rs
compute/src/node/: core.rs  diagnostic.rs  gossipsub.rs  mod.rs  reqres.rs  rpc.rs
compute/src/payloads/: error.rs  mod.rs  request.rs  response.rs  stats.rs
compute/src/reqres/: heartbeat.rs  mod.rs  specs.rs  task.rs  workflow.rs
compute/src/responders/: mod.rs  specs.rs  workflow.rs
compute/src/utils/: available_nodes.rs  crypto.rs  filter.rs  message.rs  misc.rs  mod.rs  nodes.rs  points.rs  rpc.rs  specs.rs  steps.rs
compute/src/utils/available_nodes/: mod.rs  statics.rs
compute/src/workers/: task.rs  workflow.rs
docs/: NODE_GUIDE.md  NODE_GUIDE_OLD.md  NODE_PERFORMANCE.md  NODE_SPECS.md
examples/: peers.rs  prompt.rs
examples/benchmarks/: ollama.rs
examples/common/: ollama.rs
executor/: Cargo.toml  README.md
executor/examples/: gemini.rs  ollama.rs  openai.rs  openrouter.rs
executor/src/: config.rs  lib.rs  manager.rs  models.rs  task.rs
executor/src/executors/: errors.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
executor/tests/: check_test.rs
launcher/: Cargo.toml  README.md
launcher/src/: compute.rs  env.rs  lib.rs  main.rs  ollama.rs  signal.rs
launcher/src/commands/: apikey.rs  compute.rs  env.rs  mod.rs  models.rs  settings.rs  version.rs  wallet.rs
launcher/src/environment/: apikeys.rs  dkn.rs  mod.rs  ollama.rs
launcher/src/settings/: apikey.rs  env.rs  mod.rs  models.rs  ollama.rs  port.rs  wallet.rs
launcher/src/utils/: environment.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  versioning.rs
misc/: health.sh  ollama.sh  waku.sh
monitor/: Cargo.toml  README.md
monitor/src/: main.rs  node.rs
p2p/: Cargo.toml  README.md
p2p/src/: behaviour.rs  client.rs  commands.rs  lib.rs  network.rs  nodes.rs  protocol.rs  reqres.rs  transform.rs
p2p/tests/: gossipsub_test.rs  listen_test.rs  request_test.rs
scripts/: install.ps1  install.sh
src/: config.rs  error.rs  identity.rs  lib.rs  main.rs  node.rs  setup.rs  stats.rs  update.rs  worker.rs
src/clients/: base.rs  mod.rs  relay.rs  store.rs  waku.rs
src/compute/: llm.rs  mod.rs  ollama.rs  openai.rs  payload.rs  search_python.rs
src/compute/llm/: common.rs  mod.rs  ollama.rs  openai.rs
src/config/: constants.rs  defaults.rs  mod.rs  models.rs  ollama.rs  openai.rs  providers.rs  tasks.rs
src/errors/: mod.rs
src/handlers/: heartbeat.rs  mod.rs  pingpong.rs  topics.rs  workflow.rs
src/inference/: benchmark.rs  engine.rs  mod.rs  proof.rs  stream.rs
src/models/: cache.rs  download.rs  mod.rs  registry.rs  template.rs
src/network/: auth.rs  connection.rs  mod.rs  protocol.rs
src/p2p/: available_nodes.rs  behaviour.rs  client.rs  data_transform.rs  message.rs  mod.rs  versioning.rs
src/payloads/: error.rs  mod.rs  request.rs  response.rs
src/utils/: available_nodes.rs  bloom.rs  crypto.rs  encryption.rs  filter.rs  hashing.rs  http.rs  message.rs  mod.rs  payload.rs  provider.rs  signature.rs
src/waku/: base.rs  message.rs  mod.rs  relay.rs  store.rs
src/workers/: diagnostic.rs  heartbeat.rs  mod.rs  search_python.rs  synthesis.rs  workflow.rs
start/: go.mod  start.go
tests/: compute_test.rs  heartbeats_test.rs  mock_messages_test.rs  mock_sends_test.rs  node_test.rs  ollama_test.rs  p2p_test.rs  payload_test.rs  search_python_test.rs  synthesis_aggregation_test.rs  threads_test.rs  waku_test.rs
utils/: Cargo.toml  README.md
utils/src/: crypto.rs  csv.rs  env.rs  lib.rs  message.rs  network.rs  version.rs
utils/src/payloads/: heartbeat.rs  mod.rs  specs.rs  tasks.rs
waku/: .gitignore  register_rln.sh  run_node.sh
workflows/: .env.example  Cargo.toml  README.md
workflows-v2/: Cargo.toml  README.md
workflows-v2/src/: config.rs  lib.rs  models.rs  task.rs
workflows-v2/src/providers/: gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
workflows-v2/tests/: models_test.rs
workflows/src/: config.rs  lib.rs  models.rs  ollama.rs  openai.rs  task.rs  utils.rs
workflows/src/apis/: jina.rs  mod.rs  serper.rs
workflows/src/providers/: gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
workflows/tests/: models_test.rs  parse_test.rs  workflow_test.rs
