[workspace]
resolver = "2"
members = ["compute", "p2p", "workflows"]
default-members = ["compute"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
tokio-util = { version = "0.7.10", features = ["rt"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
parking_lot = "0.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.81"
dotenvy = "0.15.7"
reqwest = "0.12.5"
rand = "0.8.5"
env_logger = "0.11.3"
log = "0.4.21"
eyre = "0.6.12"
