[workspace]
resolver = "2"
members = ["compute", "p2p", "workflows", "utils"]

# removing this breaks the workflows
default-members = ["compute"]

[workspace.package]
edition = "2021"
version = "0.5.0"
license = "Apache-2.0"
readme = "README.md"

# profiling build for flamegraphs
[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
# async stuff
tokio-util = { version = "0.7.10", features = ["rt"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

# serialize & deserialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# http client
reqwest = "0.12.5"

# utilities
dotenvy = "0.15.7"
rand = "0.8.5"
uuid = { version = "1.8.0", features = ["v7", "serde"] }

# logging & errors
env_logger = "0.11.3"
log = "0.4.21"
eyre = "0.6.12"
