[package]
name = "dria-node"
version = "0.7.2"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "dria-node"
path = "src/main.rs"

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
libsecp256k1 = "0.7"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
rand = "0.8"
llama-cpp-2 = { version = "0.1.137", features = ["mtmd"] }
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v7", "serde"] }
dialoguer = "0.11"
dirs = "6"
encoding_rs = "0.8"
dkn-protocol = { git = "https://github.com/firstbatchxyz/dkn-protocol.git", rev = "ce026e3" }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "0.8"
rcgen = "0.13"
futures = "0.3"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
semver = "1"
self-replace = "1"
tempfile = "3"
