[package]
name = "dkn-compute"
version = "0.2.11"
edition.workspace = true
license.workspace = true
readme = "README.md"
authors = ["Erhan Tezcan <erhan@firstbatch.xyz>"]

[dependencies]
tokio-util = { version = "0.7.10", features = ["rt"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.81"
reqwest = "0.12.5"

# utilities
dotenvy.workspace = true
base64 = "0.22.0"
hex = "0.4.3"
hex-literal = "0.4.1"
url = "2.5.0"
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["v4"] }

port_check = "0.2.1"

# logging & errors
rand.workspace = true
env_logger.workspace = true
log.workspace = true
eyre.workspace = true
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# encryption (ecies) & signatures (ecdsa) & hashing & bloom-filters
ecies = { version = "0.2", default-features = false, features = ["pure"] }
libsecp256k1 = "0.7.1"
sha2 = "0.10.8"
sha3 = "0.10.8"
fastbloom-rs = "0.5.9"

# dria subcrates
dkn-p2p = { path = "../p2p" }
dkn-workflows = { path = "../workflows" }

# Vendor OpenSSL so that its easier to build cross-platform packages
[dependencies.openssl]
version = "*"
features = ["vendored"]
