[package]
name = "dkn-compute"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
authors = ["Erhan Tezcan <erhan@firstbatch.xyz>"]

[dependencies]
# async stuff
tokio-util.workspace = true
tokio.workspace = true
async-trait.workspace = true

# serialize & deserialize
serde.workspace = true
serde_json.workspace = true

# http & networking
reqwest.workspace = true
port_check = "0.2.1"
url = "2.5.0"
urlencoding = "2.1.3"

# utilities
dotenvy.workspace = true
base64 = "0.22.0"
hex = "0.4.3"
hex-literal = "0.4.1"
uuid = { version = "1.8.0", features = ["v4"] }
rand.workspace = true

# logging & errors
env_logger.workspace = true
log.workspace = true
eyre.workspace = true

# encryption (ecies) & signatures (ecdsa) & hashing & bloom-filters
ecies = { version = "0.2", default-features = false, features = ["pure"] }
libsecp256k1 = "0.7.1"
sha2 = "0.10.8"
sha3 = "0.10.8"
fastbloom-rs = "0.5.9"

# dria subcrates
dkn-p2p = { path = "../p2p" }
dkn-utils = { path = "../utils" }
dkn-workflows = { path = "../workflows" }

# vendor OpenSSL so that its easier to build cross-platform packages
[dependencies.openssl]
version = "*"
features = ["vendored"]
