[package]
name = "dkn-compute"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
authors = ["Erhan Tezcan <erhan@firstbatch.xyz>"]

[dependencies]
# async stuff
tokio-util.workspace = true
tokio.workspace = true

# serialize & deserialize
serde.workspace = true
serde_json.workspace = true

# http & networking
reqwest.workspace = true
port_check = "0.2.1"
url = "2.5.0"
urlencoding = "2.1.3"

# utilities
dotenvy.workspace = true
base64 = "0.22.0"
hex = "0.4.3"
hex-literal = "0.4.1"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
rand.workspace = true

# logging & errors
env_logger.workspace = true
log.workspace = true
eyre.workspace = true
colored = "3.0.0"

# encryption (ecies) & signatures (ecdsa) & hashing & bloom-filters
ecies = { version = "0.2", default-features = false, features = ["pure"] }
libsecp256k1 = "0.7.1"
sha2 = "0.10.8"
sha3 = "0.10.8"
fastbloom-rs = "0.5.9"

# machine diagnostics
# system info
sysinfo = "0.33.1"
# gpu info FIXME: this gives a build error on Windows
# wgpu = { version = "23.0.1", features = [
#     "serde",
#     "dx12",
#     "metal",
# ], default-features = false }
# public ip
public-ip-address = "0.3.2"

# dria subcrates
dkn-p2p = { path = "../p2p" }
dkn-utils = { path = "../utils" }
dkn-workflows = { path = "../workflows" }
chrono = { version = "0.4.40", features = ["serde"] }


# vendor OpenSSL so that its easier to build cross-platform packages
[dependencies.openssl]
version = "*"
features = ["vendored"]
