[package]
name = "dkn-executor"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
authors = ["Erhan Tezcan <erhan@firstbatch.xyz>"]


[dependencies]
env_logger.workspace = true

# async stuff
tokio-util.workspace = true
tokio.workspace = true

# serialize & deserialize
serde.workspace = true
serde_json.workspace = true

# http & networking
reqwest.workspace = true

# logging & errors
log.workspace = true
eyre.workspace = true
thiserror.workspace = true

enum-iterator = "2.1.0"
rig-core = "0.11.1"
ollama-rs = { version = "0.3.0", features = ["tokio"] }

[dev-dependencies]
# only used for tests
dotenvy.workspace = true
