[package]
name = "dkn-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
authors = ["Erhan Tezcan <erhan@firstbatch.xyz>"]

[dependencies]
libp2p-identity = { version = "0.2.10", features = ["secp256k1", "peerid"] }

serde.workspace = true
serde_json.workspace = true

ecies = { version = "0.2", default-features = false, features = ["pure"] }
libsecp256k1 = "0.7.1"
sha2 = "0.10.8"
sha3 = "0.10.8"
hex = "0.4.3"

base64 = "0.22.0"

public-ip-address = "0.3.2"
chrono = { version = "0.4.40", features = ["serde"] }
uuid.workspace = true

thiserror = "2.0.12"
