[package]
name = "dkn-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
authors = ["Erhan Tezcan <erhan@firstbatch.xyz>"]

[features]
crypto = [
  "ecies",
  "libsecp256k1",
  "libp2p-identity",
  "sha2",
  "sha3",
  "hex",
  "base64",
]

[dependencies]

serde.workspace = true
serde_json.workspace = true

ecies = { version = "0.2", default-features = false, features = [
  "pure",
], optional = true }
libsecp256k1 = { version = "0.7.1", optional = true }
libp2p-identity = { version = "0.2.10", features = [
  "secp256k1",
  "peerid",
], optional = true }
sha2 = { version = "0.10.8", optional = true }
sha3 = { version = "0.10.8", optional = true }
hex = { version = "0.4.3", optional = true }
base64 = { version = "0.22.0", optional = true }

public-ip-address = "0.3.2"
chrono.workspace = true
uuid.workspace = true

thiserror = "2.0.12"
