[package]
name = "dkn-workflows"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
authors = ["Erhan Tezcan <erhan@firstbatch.xyz>"]


[dependencies]
# ollama-rs is re-exported from ollama-workflows as well
ollama-workflows = { git = "https://github.com/andthattoo/ollama-workflows" }
env_logger.workspace = true

# async stuff
tokio-util.workspace = true
tokio.workspace = true

# serialize & deserialize
serde.workspace = true
serde_json.workspace = true

# http & networking
reqwest.workspace = true

# utilities
rand.workspace = true
dkn-utils = { path = "../utils" }

# logging & errors
log.workspace = true
eyre.workspace = true

sysinfo = { version = "0.32.0", optional = true }
prettytable = { version = "0.10.0", optional = true }

[features]
profiling = ["sysinfo", "prettytable"]

[dev-dependencies]
# only used for tests
dotenvy.workspace = true

[[bin]]
name = "tps"
path = "src/bin/tps.rs"
