[package]
name = "dkn-workflows"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
authors = ["Erhan Tezcan <erhan@firstbatch.xyz>"]


[dependencies]
# ollama-rs is re-exported from ollama-workflows as well
ollama-workflows = { git = "https://github.com/andthattoo/ollama-workflows" }
env_logger.workspace = true

# async stuff
tokio-util.workspace = true
tokio.workspace = true

# serialize & deserialize
serde.workspace = true
serde_json.workspace = true

# http & networking
reqwest.workspace = true

# utilities
rand.workspace = true
dkn-utils = { path = "../utils" }

# logging & errors
log.workspace = true
eyre.workspace = true

enum-iterator = "2.1.0"
rig-core = "0.11.1"

[dev-dependencies]
# only used for tests
dotenvy.workspace = true
